# SkyRL-JR

./: .pre-commit-config.yaml  README.md
.github/workflows/: cpu_skyrl_tx.yaml  gpu_ci.yaml
docker/: Dockerfile  Dockerfile.megatron
skyrl-agent/: .env.template  .gitignore  README.md  pyproject.toml
skyrl-agent/data/: browsecomp-plus.py  deep_research.py  memagent.py  search-r1.py  swe_data.py
skyrl-agent/examples/: README.md
skyrl-agent/examples/run_openai/: openai_react.yaml  run_openai_react.py  test_vllm_oh.yaml  test_vllm_oh_demo.py
skyrl-agent/examples/run_skyrl/: run_skyrl_swe.sh  skyrl_swe.yaml  skyrl_web_research_hle.sh  skyrl_web_research_hle.yaml
skyrl-agent/examples/run_tinker/: tinker_memagent.sh  tinker_memagent.yaml  tinker_reasoning_search_r1.sh  tinker_reasoning_search_r1.yaml
skyrl-agent/examples/run_verl/: verl_browsecomp.sh  verl_browsecomp.yaml  verl_oh.sh  verl_oh.yaml  verl_search_r1.sh  verl_search_r1.yaml  verl_web_research_hle.sh  verl_web_research_hle.yaml
skyrl-agent/skyrl_agent/agents/: base.py
skyrl-agent/skyrl_agent/agents/oh_codeact/: __init__.py  codeact_agent.py  codeact_runner.py
skyrl-agent/skyrl_agent/agents/react/: messages.py  react_agent.py  react_runner.py
skyrl-agent/skyrl_agent/config/: configuration_utils.py
skyrl-agent/skyrl_agent/dispatcher/: dispatchers.py
skyrl-agent/skyrl_agent/functional/: function_calling.py  history.py  utils.py
skyrl-agent/skyrl_agent/integrations/: openai.py
skyrl-agent/skyrl_agent/integrations/skyrl_train/: skyrl_train_backend.py  trainer.py
skyrl-agent/skyrl_agent/integrations/tinker/: README.md  __init__.py  tinker_backend.py  tinker_train.py
skyrl-agent/skyrl_agent/integrations/verl/: skyagent_async_vllm_server.py  verl_async_manager.py  verl_backend.py  verl_main_ppo.py  verl_trainer.py
skyrl-agent/skyrl_agent/tasks/general_react/: utils.py
skyrl-agent/skyrl_agent/tasks/swebench/: r2e_utils.py  utils.py
skyrl-agent/skyrl_agent/tasks/swebench/scripts/setup/: instance_r2e_entry.sh  instance_swe_entry.sh
skyrl-agent/skyrl_agent/tasks/swebench/scripts/tools/: search.py  str_replace_editor.py
skyrl-agent/skyrl_agent/tasks/verifiers/: naive_dapo.py  qa.py
skyrl-agent/skyrl_agent/tasks/verifiers/coder1/: __init__.py
skyrl-agent/skyrl_agent/tasks/verifiers/prime_math/: __init__.py
skyrl-agent/skyrl_agent/tasks/verifiers/torl/: __init__.py  eval.py  math_verify.py
skyrl-agent/skyrl_agent/tasks/verifiers/web_search/: stem_llm_judge.py
skyrl-agent/skyrl_agent/tools/: __init__.py  base.py  em_finish.py  finish.py  local_search.py  next_memagent.py  prompt.py  search.py  web_browser.py
skyrl-train/: README.md  pyproject.toml  train.sh
skyrl-train/ci/: anyscale_gpu_ci.yaml  anyscale_gpu_e2e_test.yaml  gpu_ci_run.sh
skyrl-train/docs/: README.md  index.rst
skyrl-train/docs/configuration/: config.rst  placement.rst
skyrl-train/docs/examples/: lora.rst  megatron.rst  ppo.rst  remote_server.rst
skyrl-train/docs/getting-started/: installation.rst  quickstart.rst
skyrl-train/docs/recipes/: overview.rst
skyrl-train/docs/troubleshooting/: troubleshooting.rst
skyrl-train/docs/tutorials/: fully_async.rst  one_step_off_async.rst
skyrl-train/examples/async/: async_trainer.py
skyrl-train/examples/fully_async/: README.md  async_run_gsm8k.sh  main_async.py  skyrl_gym_http_generator.py
skyrl-train/examples/gsm8k/: jr_run_gsm8k.sh
skyrl-train/examples/lora/: run_qwen2_5_0.5b_gsm8k_grpo_lora.sh  run_qwen2_5_0.5b_gsm8k_ppo_lora.sh
skyrl-train/examples/megatron/: run_megatron.sh  run_megatron_moonlight.sh  run_megatron_qwen3-235b-a22b.sh  run_megatron_qwen3-30b-a3b.sh  run_search_megatron.sh
skyrl-train/examples/mini_swe_agent/: mini_swe_generator.py  run_mini_swe_0.6B.sh
skyrl-train/examples/on_policy_distillation/: README.md
skyrl-train/examples/step_wise/: run_skyrl_sql_step_wise.sh  run_skyrl_sql_step_wise_qwen3.sh
skyrl-train/examples/terminal_bench/generator/: terminal_bench_generator.py
skyrl-train/integrations/modal/: README.md  main.py
skyrl-train/skyrl_train/: evaluate.py  fully_async_trainer.py  model_wrapper.py  trainer.py
skyrl-train/skyrl_train/config/: ppo_base_config.yaml
skyrl-train/skyrl_train/config/megatron_config/: policy.yaml
skyrl-train/skyrl_train/distributed/: fsdp_strategy.py
skyrl-train/skyrl_train/distributed/megatron/: megatron_strategy.py  megatron_utils.py
skyrl-train/skyrl_train/entrypoints/: main_base.py
skyrl-train/skyrl_train/generators/: base.py  skyrl_gym_generator.py  step_wise_generator.py  utils.py
skyrl-train/skyrl_train/inference_engines/: base.py  inference_engine_client.py  ray_wrapped_inference_engine.py
skyrl-train/skyrl_train/inference_engines/vllm/: vllm_engine.py
skyrl-train/skyrl_train/utils/: constants.py  trainer_utils.py  utils.py
skyrl-train/skyrl_train/workers/: worker.py
skyrl-train/skyrl_train/workers/deepspeed/: deepspeed_worker.py
skyrl-train/skyrl_train/workers/fsdp/: fsdp_worker.py
skyrl-train/skyrl_train/workers/megatron/: megatron_model_wrapper.py  megatron_worker.py
skyrl-train/tests/cpu/generators/: test_skyrl_gym_generator.py  test_utils.py
skyrl-train/tests/cpu/inf_engines/: test_inference_engine_client.py
skyrl-train/tests/gpu/: test_megatron_worker.py
skyrl-train/tests/gpu/gpu_ci/: test_lora.py  test_pause_and_continue_generation.py  test_ppo_train.py  test_trainer_full_checkpointing.py  test_verifiers_generator.py
skyrl-tx/benchmarks/: bench_forward_backward.py
skyrl-tx/tests/models/: test_qwen3.py  test_qwen3_generate.py  test_qwen3_lora_training.py
skyrl-tx/tests/tinker/: test_api.py  test_engine.py
skyrl-tx/tests/utils/: test_generator.py  test_models.py
skyrl-tx/tx/layers/: lora.py
skyrl-tx/tx/models/: qwen3.py  types.py
skyrl-tx/tx/run/: train.py
skyrl-tx/tx/tinker/: api.py  config.py  db_models.py  engine.py  types.py
skyrl-tx/tx/tinker/extra/: __init__.py  external_inference.py
skyrl-tx/tx/utils/: generator.py  models.py
(+1 files in other folders)
